--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Four in Camp
 
   A Story of Summer Adventures in the New Hampshire Woods'
